# jjb_Quiz

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 3f9fc13a9af7_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  questions.py  quizzes.py  submissions.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: __init__.py  base.py  question.py  quiz.py  submission.py  user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  base.py  option.py  question.py  quiz.py  session.py  submission.py  user.py
app/schemas/: __init__.py  question.py  quiz.py  submission.py  token.py  user.py
app/seed/: data.json  seed_from_json.py
app/services/: caching_service.py  grading_service.py  quiz_service.py
